# m_c_video_to_robot

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
configs/: filters.yaml  mindbot_robot.yaml  paths.example.yaml  smplx_to_mindbot.json
docs/: architecture.md  gmr_adapter.md  gvhmr_setup.md  isaac_replay.md  official_environment_inventory.md  required_upstream_changes.md  semantic_gesticulator.md  test_log.md  troubleshooting.md  venv_setup.md
patches/GVHMR/: blackwell_cu128_demo.patch
requirements/: gmr.txt  gvhmr.txt  isaac.txt  tools.txt
scripts/: apply_gmr_patches.sh  apply_gvhmr_patches.sh  bootstrap_venvs.sh  build_mindbot_gmr_model.py  check_dependencies.sh  check_gvhmr_assets.py  check_no_absolute_paths.sh  check_semantic_gesticulator_assets.py  extract_human_motion.sh  inspect_official_environment.py  publish_github.sh  replay_in_isaac.sh  retarget_bvh_to_mindbot.sh  retarget_to_mindbot.sh  run_pipeline.sh  run_semantic_story_pipeline.sh  run_tests.sh  setup_semantic_gesticulator.sh
src/m_c_video_to_robot/: __init__.py  build_model.py  bvh_loader.py  bvh_to_mindbot.py  filters.py  gmr_registration.py  gvhmr_loader.py  human_frame_transform.py  isaac_replay.py  limits.py  motion_format.py  paths.py  preview.py  retarget.py  retarget_core.py  robot_asset.py  story_audio.py  validate_motion.py
tests/: test_bvh_loader.py  test_motion_validation.py  test_robot_asset.py  test_waist_heading.py
