[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m-c-video-to-robot"
version = "0.1.0"
description = "Video to GVHMR to GMR to MindBot Isaac replay pipeline."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pyyaml",
  "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
